--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Calculate time spent on a git repository",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
+  },
+  "bin": {
+    "shoot": "./index.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +30,14 @@
   "dependencies": {
     "bluebird": "^2.1.3",
     "lodash": "^2.4.1",
+    "mocha": "^1.20.1",
     "moment": "^2.7.0",
     "nodegit": "^0.1.4"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-release": "^0.7.0",
+    "grunt-shell": "^0.7.0"
   }
 }
