--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "homepage": "https://github.com/kimmobrunfeldt/git-hours",
   "dependencies": {
     "bluebird": "^2.1.3",
+    "commander": "^2.2.0",
     "lodash": "^2.4.1",
     "mocha": "^1.20.1",
-    "moment": "^2.7.0",
     "nodegit": "^0.1.4"
   },
   "devDependencies": {
