--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "git-hours",
   "version": "0.1.8",
-  "description": "Calculate time spent on a git repository",
+  "description": "Estimate time spent on a git repository",
   "main": "index.js",
   "scripts": {
     "test": "grunt test"
