--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "bluebird": "^2.1.3",
     "commander": "^2.2.0",
     "lodash": "^2.4.1",
-    "mocha": "^1.20.1",
-    "nodegit": "^0.1.4"
+    "mocha": "^1.20.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
