Rename executable command to git-hours so it can be executed with git hours

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "grunt test"
   },
   "bin": {
-    "githours": "./index.js"
+    "git-hours": "./index.js"
   },
   "repository": {
     "type": "git",
