--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "bluebird": "^2.1.3",
     "commander": "^2.2.0",
     "lodash": "^2.4.1",
-    "mocha": "^1.20.1",
-    "nodegit": "^0.1.4"
+    "nodegit": "^0.4.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-release": "^0.7.0",
-    "grunt-shell": "^0.7.0"
+    "grunt-shell": "^0.7.0",
+    "mocha": "^2.2.5"
   }
 }
