--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 - '0.11'
 - '0.10'
 before_script:
-- npm install -g mocha grunt-cli
+- npm install -g mocha grunt-cli nodegit
 notifications:
   email:
   - kimmobrunfeldt+git-hours@gmail.com
