--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: node_js
 node_js:
-- '0.12'
+  - '0.12'
 sudo: false
 before_script:
-- npm install -g mocha grunt-cli nodegit
+  - npm install -g nodegit
+script:
+  - npm run ci
 notifications:
   email:
   - kimmobrunfeldt+git-hours@gmail.com
