Install libstdc++ when testing on Travis
Found on [1]. Fixes the error [2] when running a build on Travis CI.

[1] https://github.com/nodegit/nodegit/issues/853
[2] Error: /usr/lib/x86_64-linux-gnu/libstdc++.so.6: version
`GLIBCXX_3.4.20' not found (required by
/home/travis/build/kimmobrunfeldt/git-hours/node_modules/nodegit/build/Release/nodegit.node)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,9 @@ script:
 notifications:
   email:
   - kimmobrunfeldt+git-hours@gmail.com
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - libstdc++-4.9-dev
