Use a C++11 compliant compiler
This is necessary for Node.js 4 support. As per
https://docs.travis-ci.com/user/languages/javascript-with-nodejs#Node.js-v4-(or-io.js-v3)-compiler-requirements

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,12 @@ notifications:
   email:
   - kimmobrunfeldt+git-hours@gmail.com
 
+env:
+  - CXX=g++-4.8
+
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - libstdc++-4.9-dev
+      - g++-4.8
