--- a/.editorconfig
+++ b/.editorconfig
@@ -1,28 +1,14 @@
-# EditorConfig is awesome: http://EditorConfig.org
-
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
-insert_final_newline = true
-
-# 4 space indentation
-[*.py]
-indent_style = space
-indent_size = 4
-
-# Tab indentation (no size specified)
-[*.js]
-indent_style = space
-indent_size = 4
-
-# Matches the exact files package.json and .travis.yml
-[{package.json,.travis.yml,Gruntfile.js}]
+charset = utf-8
 indent_style = space
 indent_size = 2
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
 
-[Makefile]
+[*.md]
 indent_style = tab
-indent_size = 4
+indent_size = 2
+trim_trailing_whitespace = false
