--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "mocha": "^9.0.2",
+    "nodemon": "^2.0.9",
     "releasor": "^1.2.1"
   },
   "scripts": {
