--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "bin": {
     "git-hours": "./src/index.js"
   },
+  "files": ["src/**/*"],
   "repository": {
     "type": "git",
     "url": "https://github.com/kimmobrunfeldt/git-hours.git"
